Cat clicker 2 (lesson 1, through section 8.)
Notes:
 - Requirements:
   - Shall support two cats.
   - Shall display cat's name, number of clicks per cat, and photo.
 - Second photo from https://www.pexels.com/photo/eyes-cat-coach-sofa-96938/

--- a/CatClicker.html
+++ b/CatClicker.html
@@ -6,8 +6,24 @@
 </head>
 
 <body>
-	<div id="TheClickCounter">0</div>
-	<img src="Resources/Cat.jpeg" id="TheCatPhoto" width="100%"/>
+	<div id="Cat1" width="100%">
+		<div class="Name">
+		</div>
+		<div class="Counter">
+		</div>
+		<div class="Photo">
+			<img src="Resources/Cat.jpeg" width="100%"/>
+		</div>
+	</div>
+	<div id="Cat2" width="100%">
+		<div class="Name">
+		</div>
+		<div class="Counter">
+		</div>
+		<div class="Photo">
+			<img src="Resources/Cat2.jpeg" width="100%"/>
+		</div>
+	</div>
 
 	<script src="Scripts/CatClicker.js"></script>
 </body>
