Coursework through lesson 1, section 14.
Notes:
 - Requirements:
   - Shall have selection area to select between 5+ cats.
   - Shall show one cat at a time.
   - For each cat, shall dispaly name, number of clicks, and photo.
   - Click counts shall be tracked separately per-cat.
 - Photos added from Pexels:
   - https://www.pexels.com/photo/animal-animal-photography-blur-cat-55750/
   - https://www.pexels.com/photo/brown-and-black-cat-37337/
   - https://www.pexels.com/photo/tabby-kitten-sitting-on-the-grass-669015/

--- a/CatClicker.html
+++ b/CatClicker.html
@@ -6,22 +6,17 @@
 </head>
 
 <body>
-	<div id="Cat1" width="100%">
-		<div class="Name">
-		</div>
-		<div class="Counter">
-		</div>
-		<div class="Photo">
-			<img src="Resources/Cat.jpeg" width="100%"/>
-		</div>
+	<div id="SelectorArea">
 	</div>
-	<div id="Cat2" width="100%">
-		<div class="Name">
+
+	<hr>
+	
+	<div id="CatArea">
+		<div id="CatArea.Name">
 		</div>
-		<div class="Counter">
+		<div id="CatArea.Clicks">
 		</div>
-		<div class="Photo">
-			<img src="Resources/Cat2.jpeg" width="100%"/>
+		<div id="CatArea.Photo">
 		</div>
 	</div>
 
